8146920: [hidpi] Multi-Monitor issue with HiDpi scaling and undecorated stages

Reviewed-by: kcr, ckyang, ddhill